add logic last login and last logout
