# src/main/java/com/tvj/internaltool/controller/UserController.java
@@ -1,6 +1,27 @@
 package com.tvj.internaltool.controller;
 
-import com.tvj.internaltool.dto.req.*;
+import javax.validation.Valid;
+import javax.validation.constraints.NotBlank;
+
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
+
+import com.tvj.internaltool.dto.req.ForgotPasswordReqDto;
+import com.tvj.internaltool.dto.req.RecoverPasswordReqDto;
+import com.tvj.internaltool.dto.req.UpdatePasswordReqDto;
+import com.tvj.internaltool.dto.req.UserLoginReqDto;
+import com.tvj.internaltool.dto.req.UserSettingReqDto;
 import com.tvj.internaltool.dto.res.FileResDto;
 import com.tvj.internaltool.dto.res.MessageResDto;
 import com.tvj.internaltool.dto.res.UserLoginResDto;
@@ -8,14 +29,6 @@ import com.tvj.internaltool.dto.res.UserSettingResDto;
 import com.tvj.internaltool.service.UserService;
 import com.tvj.internaltool.utils.ResponseCode;
 import com.tvj.internaltool.utils.ResponseMessage;
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.Valid;
-import javax.validation.constraints.NotBlank;
 
 @RestController
 @RequestMapping("/user")
@@ -45,7 +58,8 @@ public class UserController {
     public ResponseEntity<?> forgotPasswordSendRequest(@Valid @RequestBody ForgotPasswordReqDto forgotPasswordReqDto) {
         boolean isMailSent = userService.processForgotPassword(forgotPasswordReqDto.getUsername());
         if (isMailSent) {
-            return new ResponseEntity<>(new MessageResDto(ResponseCode.SEND_MAIL_SUCCESS, ResponseMessage.SEND_MAIL_SUCCESS),
+            return new ResponseEntity<>(
+                    new MessageResDto(ResponseCode.SEND_MAIL_SUCCESS, ResponseMessage.SEND_MAIL_SUCCESS),
                     HttpStatus.OK);
         }
         return new ResponseEntity<>(new MessageResDto(ResponseCode.SEND_MAIL_FAILED, ResponseMessage.SEND_MAIL_FAILED),
@@ -59,18 +73,22 @@ public class UserController {
             return new ResponseEntity<>(new MessageResDto(ResponseCode.TOKEN_IS_VALID, ResponseMessage.TOKEN_IS_VALID),
                     HttpStatus.OK);
         }
-        return new ResponseEntity<>(new MessageResDto(ResponseCode.TOKEN_HAS_EXPIRED, ResponseMessage.TOKEN_HAS_EXPIRED),
+        return new ResponseEntity<>(
+                new MessageResDto(ResponseCode.TOKEN_HAS_EXPIRED, ResponseMessage.TOKEN_HAS_EXPIRED),
                 HttpStatus.BAD_REQUEST);
     }
 
     @PostMapping(value = "/password-recover-update-password")
-    public ResponseEntity<?> recoverPasswordUpdatePassword(@Valid @RequestBody RecoverPasswordReqDto recoverPasswordReqDto) {
+    public ResponseEntity<?> recoverPasswordUpdatePassword(
+            @Valid @RequestBody RecoverPasswordReqDto recoverPasswordReqDto) {
         boolean isPasswordUpdated = userService.processRecoverPassword(recoverPasswordReqDto);
         if (isPasswordUpdated) {
-            return new ResponseEntity<>(new MessageResDto(ResponseCode.UPDATE_PASSWORD_SUCCESS, ResponseMessage.UPDATE_PASSWORD_SUCCESS),
+            return new ResponseEntity<>(
+                    new MessageResDto(ResponseCode.UPDATE_PASSWORD_SUCCESS, ResponseMessage.UPDATE_PASSWORD_SUCCESS),
                     HttpStatus.OK);
         }
-        return new ResponseEntity<>(new MessageResDto(ResponseCode.UPDATE_PASSWORD_FAILED, ResponseMessage.UPDATE_PASSWORD_FAILED),
+        return new ResponseEntity<>(
+                new MessageResDto(ResponseCode.UPDATE_PASSWORD_FAILED, ResponseMessage.UPDATE_PASSWORD_FAILED),
                 HttpStatus.BAD_REQUEST);
     }
 
@@ -80,7 +98,8 @@ public class UserController {
         if (userSettingResDto != null) {
             return new ResponseEntity<>(userSettingResDto, HttpStatus.OK);
         }
-        return new ResponseEntity<>(new MessageResDto(ResponseCode.GET_USER_SETTING_FAILED, ResponseMessage.GET_USER_SETTING_FAILED),
+        return new ResponseEntity<>(
+                new MessageResDto(ResponseCode.GET_USER_SETTING_FAILED, ResponseMessage.GET_USER_SETTING_FAILED),
                 HttpStatus.BAD_REQUEST);
     }
 
@@ -88,10 +107,10 @@ public class UserController {
     public ResponseEntity<?> updateUserSetting(@Valid @RequestBody UserSettingReqDto userSettingReqDto) {
         UserSettingResDto userSettingResDto = userService.updateUserSetting(userSettingReqDto);
         if (userSettingResDto != null) {
-            return new ResponseEntity<>(userSettingResDto,
-                    HttpStatus.OK);
+            return new ResponseEntity<>(userSettingResDto, HttpStatus.OK);
         }
-        return new ResponseEntity<>(new MessageResDto(ResponseCode.UPDATE_USER_SETTING_FAILED, ResponseMessage.UPDATE_USER_SETTING_FAILED),
+        return new ResponseEntity<>(
+                new MessageResDto(ResponseCode.UPDATE_USER_SETTING_FAILED, ResponseMessage.UPDATE_USER_SETTING_FAILED),
                 HttpStatus.BAD_REQUEST);
     }
 
@@ -99,10 +118,12 @@ public class UserController {
     public ResponseEntity<?> updatePassword(@Valid @RequestBody UpdatePasswordReqDto updatePasswordReqDto) {
         boolean isPasswordUpdated = userService.updatePassword(updatePasswordReqDto);
         if (isPasswordUpdated) {
-            return new ResponseEntity<>(new MessageResDto(ResponseCode.UPDATE_PASSWORD_SUCCESS, ResponseMessage.UPDATE_PASSWORD_SUCCESS),
+            return new ResponseEntity<>(
+                    new MessageResDto(ResponseCode.UPDATE_PASSWORD_SUCCESS, ResponseMessage.UPDATE_PASSWORD_SUCCESS),
                     HttpStatus.OK);
         }
-        return new ResponseEntity<>(new MessageResDto(ResponseCode.UPDATE_PASSWORD_FAILED, ResponseMessage.UPDATE_PASSWORD_FAILED),
+        return new ResponseEntity<>(
+                new MessageResDto(ResponseCode.UPDATE_PASSWORD_FAILED, ResponseMessage.UPDATE_PASSWORD_FAILED),
                 HttpStatus.BAD_REQUEST);
     }
 
@@ -112,7 +133,8 @@ public class UserController {
         if (StringUtils.isNotBlank(imgPath)) {
             return new ResponseEntity<>(new FileResDto(imgPath), HttpStatus.OK);
         }
-        return new ResponseEntity<>(new MessageResDto(ResponseCode.UPDATE_AVATAR_FAILED, ResponseMessage.UPDATE_AVATAR_FAILED),
+        return new ResponseEntity<>(
+                new MessageResDto(ResponseCode.UPDATE_AVATAR_FAILED, ResponseMessage.UPDATE_AVATAR_FAILED),
                 HttpStatus.BAD_REQUEST);
     }
 
@@ -120,10 +142,25 @@ public class UserController {
     public ResponseEntity<?> removeAvatar() {
         boolean isRemoved = userService.removeAvatar();
         if (isRemoved) {
-            return new ResponseEntity<>(new MessageResDto(ResponseCode.REMOVE_AVATAR_SUCCESS, ResponseMessage.REMOVE_AVATAR_SUCCESS),
+            return new ResponseEntity<>(
+                    new MessageResDto(ResponseCode.REMOVE_AVATAR_SUCCESS, ResponseMessage.REMOVE_AVATAR_SUCCESS),
                     HttpStatus.OK);
         }
-        return new ResponseEntity<>(new MessageResDto(ResponseCode.REMOVE_AVATAR_FAILED, ResponseMessage.REMOVE_AVATAR_FAILED),
+        return new ResponseEntity<>(
+                new MessageResDto(ResponseCode.REMOVE_AVATAR_FAILED, ResponseMessage.REMOVE_AVATAR_FAILED),
+                HttpStatus.BAD_REQUEST);
+    }
+
+    @GetMapping(value = "/save-last-logout")
+    public ResponseEntity<?> saveLastLogout() {
+        boolean isLoggedOut = userService.saveLastLogout();
+        if (isLoggedOut) {
+            return new ResponseEntity<>(
+                    new MessageResDto(ResponseCode.SAVE_LAST_LOGOUT_SUCCESS, ResponseMessage.SAVE_LAST_LOGOUT_SUCCESS),
+                    HttpStatus.OK);
+        }
+        return new ResponseEntity<>(
+                new MessageResDto(ResponseCode.SAVE_LAST_LOGOUT_FAILED, ResponseMessage.SAVE_LAST_LOGOUT_FAILED),
                 HttpStatus.BAD_REQUEST);
     }
 
